# TetrisGYM

./: .gitattributes  .gitignore  CHANGELOG.md  CNROM_heart.bps  INSTALL.md  Makefile  MapperChecklist.md  README-v4.md  README-v5.md  README.md  README_v4.md  TODO.md  TetrisGYM v3.1.bps  TetrisGYM.bps  bm.sh  build-compat.sh  build.bat  build.js  build.sh  charmap.asm  config.asm  demo_data.asm  gentas.py  goofygym.bps  h qq  main.asm  maketas.sh  presets.asm  presets.js  ta levelControlMode  testtas.sh  tetris-ram.asm  tetris.asm  tetris.bps  tetris.dbg  tetris.ips  tetris.lbl  tetris.md5  tetris.nes.cfg  tetris.nes.ram.nl  (+1 more)
data/: demo_data.asm  dmcdata.asm  unreferenced_data4.asm  unreferenced_data5.asm
menu/: menu.asm  scrolltext.asm  scrolltext.js
presets/: presets.asm  presets.js
release/: TetrisGYM v4.bps
src/: audio.asm  boot.asm  charmap.asm  chr.asm  constants.asm  header.asm  io.asm  macros.asm  main.asm  nametables.asm  palettes.asm  ram.asm  reset.asm  seeds.asm  tetris.nes.cfg  words.asm
tests/: Cargo.toml  README.md  rusty.out
tests/src/: block.rs  constants.rs  crash.rs  crunch.rs  cycle_count.rs  cycle_parity.rs  drought.rs  floor.rs  garbage.rs  harddrop.rs  hz_display.rs  input.rs  labels.rs  main.rs  mapper.rs  nmi.rs  palettes.rs  parity.rs  patch.rs  playfield.rs  pushdown.rs  ram.rs  rng.rs  rng_seeds.txt  score.rs  sps.rs  toprow.rs  tspins.rs  util.rs  video.rs
tools/: cycles.lua  disasm.js  flips-linux  format.js  freespace.js  hzpalette.html  log.lua  mappingtext.js  modes.awk  nametablepatch.js  nes_chr_encode.py  pace.rb  tas.lua  (+1 more)
(+158 files in other folders)
